<resources>
    <string name="app_name">CheeKat</string>
    <string-array name="task_title">
        <item>任务</item>
        <item>我的</item>
    </string-array>
    <string-array name="task_sex">
        <item>限男生</item>
        <item>限女生</item>
        <item>不限男女</item>
    </string-array>
    <string-array name="data_array">
        <item>今天</item>
        <item>明天</item>
        <item>后天</item>
    </string-array>
    <string-array name="task_type">
        <item>拼车</item>
        <item>美食</item>
        <item>唱K</item>
        <item>游戏</item>
        <item>出游</item>
        <item>运动</item>
        <item>品酒</item>
        <item>其他</item>
    </string-array>
    <string-array name="modify_info">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="payment">
        <item>微信</item>
        <item>钱包余额(%.2f)</item>
    </string-array>
    <string name="header_reset">下拉刷新</string>
    <string name="header_pull">下拉刷新</string>
    <string name="header_pull_over">释放立即刷新</string>
    <string name="header_refreshing">正在刷新&#8230;</string>
    <string name="header_completed">刷新成功</string>
    <string name="register_verify_code_text">获取验证码</string>
    <string name="register_retest">%d秒后重试</string>
    <string name="task_month_string">月</string>
    <string name="task_day_string">日</string>
    <string name="task_dot">:</string>
    <string name="task_only_man">限男生</string>
    <string name="task_only_f">限女生</string>
    <string name="task_m_and_f">不限男女</string>
    <string name="task_close">关闭</string>
    <string name="task_running">进行中</string>
    <string name="task_commit">确认完成</string>
    <string name="task_commited">已完成</string>
    <string name="task_expired">已失效</string>
    <string name="task_receive_task">领取任务</string>
    <string name="task_wait_for_comfirm">待对方确认</string>
    <string name="task_detail_title">任务详情</string>
    <string name="task_not_comfirmed">任务还没有被领取哦!</string>
    <string name="task_number">任务编号:</string>
    <string name="task_creation_time">任务创建时间:</string>
    <string name="task_collection_time">任务领取时间:</string>
    <string name="task_completion_time">任务完成时间:</string>
    <string name="feedback_title">用户反馈</string>
    <string name="feedback_text_count">个字</string>
    <string name="feedback_input_content">请输入反馈内容</string>
    <string name="feedback_commit_success">提交成功</string>
    <string name="feedback_problem">问题和意见</string>
    <string name="feedback_content_hint">我们期待您的反馈</string>
    <string name="feedback_commit">提交</string>
    <string name="land_protocol">登录即代表您同意用户协议</string>
    <string name="land_choose_method">选择登录方式</string>
    <string name="land_title">登录</string>
    <string name="land_get_verify_code">获取验证码</string>
    <string name="land_input_phone">请输入手机号码</string>
    <string name="land_input_correct_number">请输入正确手机号码</string>
    <string name="land_input_verify_code">请输入验证码</string>
    <string name="land_phone">手机号</string>
    <string name="land_verify_code">短信验证码</string>
    <string name="main_message">消息</string>
    <string name="main_nearby">附近</string>
    <string name="main_me">我的</string>
    <string name="modify_user_info_title">完善个人信息</string>
    <string name="modify_user_camera">拍照</string>
    <string name="modify_user_photo_album">相册</string>
    <string name="modify_user_head_img">头像</string>
    <string name="modify_user_nick">昵称</string>
    <string name="modify_user_birthday">生日</string>
    <string name="modify_user_sex">性别</string>
    <string name="modify_user_height">身高</string>
    <string name="modify_user_commit">确认</string>
    <string name="packet_title">钱包</string>
    <string name="packet_balance">余额</string>
    <string name="packet_details">明细</string>
    <string name="packet_yuan">元</string>
    <string name="packet_recharge">充值</string>
    <string name="packet_withdraw">提现</string>
    <string name="nearby_title">附近</string>
    <string name="nick_not_null">昵称不能为空</string>
    <string name="nick_cancel">取消</string>
    <string name="nick_commit">确定</string>
    <string name="nick_input_name">请输入昵称</string>
    <string name="packet_detail_title">明细</string>
    <string name="publish_title">发布</string>
    <string name="publish_content_count">%S/15个字</string>
    <string name="publish_choose_start_time">请选择任务开始时间</string>
    <string name="publish_input_task_content">请输入任务说明</string>
    <string name="publish_commit">发布完成</string>
    <string name="publish_task_type">任务类型</string>
    <string name="publish_time">时间</string>
    <string name="publish_choose_time">选择时间</string>
    <string name="publish_packet">红包</string>
    <string name="publish_location">所在地</string>
    <string name="publish_sz">深圳</string>
    <string name="publish_anonymous">匿名</string>
    <string name="publish_send_to">发给谁</string>
    <string name="publish_all_human">所有人</string>
    <string name="publish_mission_instruction">任务说明</string>
    <string name="publish_talk_about_sth">说点什么吧&#8230;</string>
    <string name="publish_0_15">0/15个字</string>
    <string name="publish_instruction">发布任务的金额越高,任务排名越靠前</string>
    <string name="publish_commit_task">发布任务</string>
    <string name="recharge_for_user">用户充值</string>
    <string name="recharge_balance">余额:&#160;</string>
    <string name="recharge_input_amount">手动输入充值金额</string>
    <string name="recharge_payment_method">支付方式</string>
    <string name="recharge_payment_for_wetchat">微信</string>
    <string name="red_packet_title">包红包</string>
    <string name="red_charge_content">该服务资金安全由奇卡提供全程担保</string>
    <string name="red_packet_pay">确认支付</string>
    <string name="red_packet_recharge">任务红包充值</string>
    <string name="set_title">设置</string>
    <string name="set_clear_success">清除成功</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_notify_switch">通知开关</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_out_login">退出登录</string>
    <string name="task_send">发任务</string>
    <string name="user_index_no_data">没有数据</string>
    <string name="user_index_tian">小甜甜</string>
    <string name="user_index_private_letter">私信</string>
    <string name="user_index_added">已添加</string>
    <string name="user_index_age">年龄:&#160;20</string>
    <string name="user_index_height">身高:&#160;160cm</string>
    <string name="withdraw_wetchat_account">提现微信账号</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="withdraw_0">可提现金额0元</string>
    <string name="withdraw_method">提现方式</string>
    <string name="withdraw_instruction">邀请好友充值贵族或者消费分成收益达100,即可随时随意金额提现</string>
    <string name="withdraw_submit_rules">提交规则</string>
    <string name="task_to_receive">待领取</string>
    <string name="me_purse">我的钱包</string>
    <string name="balance_196_00">余额196.00</string>
    <string name="me_help_and_feedback">帮助与反馈</string>
    <string name="nearby_map_stealth">隐身</string>
    <string name="nearby_map_online">在线</string>
    <string name="nearby_map_setting_error">设置失败</string>
    <string name="nearby_map_setting_success">设置成功</string>
    <string name="land_phone_verify_code_success">验证码验证成功</string>
    <string name="land_phone_verify_code_error">验证码错误</string>
    <string name="land_phone_get_verify_code_success">获取验证码成功</string>
    <string name="land_phone_get_verify_code_error">获取验证码失败,请重试</string>
    <string name="cm">cm</string>
    <string name="common_man">男</string>
    <string name="common_woman">女</string>
    <string name="util_parameter_null">参数为空</string>
    <string name="util_system_busy">系统繁忙</string>
    <string name="util_user_exists">该用户已存在</string>
    <string name="util_password_error">密码错误</string>
    <string name="util_user_not_exist">该用户不存在</string>
    <string name="util_incorrect_data">数据有误</string>
    <string name="util_task_not_suitable">该任务不适合你</string>
    <string name="util_not_mutual_concern">无法建立群聊,因为存在不是互关的成员</string>
    <string name="util_task_id_not_exists">任务id不存在</string>
    <string name="util_task_received">该任务已被领取</string>
    <string name="util_operation_permission">您不具备操作该任务的权限</string>
    <string name="util_can_not_get_own_task">不能领取自己的任务</string>
    <string name="util_abnormal_data">数据异常,无法确认完成</string>
    <string name="util_group_owner_id_not_exists">群主id不存在</string>
    <string name="util_not_group_owner">你不是群主</string>
    <string name="util_group_member_id_not_exists">成员id不存在</string>
    <string name="util_red_packet_id_not_exists">红包id不存在</string>
    <string name="util_red_packet_picked_up">红包被领取</string>
    <string name="util_failed_receive_red_packet">红包领取失败</string>
    <string name="util_order_generation_failed">订单生成失败</string>
    <string name="util_order_generation_success">订单生成成功</string>
    <string name="util_insufficient_balance">余额不足</string>
    <string name="util_red_packet_sended_failed">红包发送失败</string>
    <string name="util_withdrawal_quota_wrong">提现额度错误</string>
    <string name="util_picture_upload_failed">图片上传失败</string>
    <string name="util_group_id_not_exists">群id不存在</string>
    <string name="util_group_account_not_exists">群成员账号不存在</string>
    <string name="util_group_create_failed">环信群创建失败</string>
    <string name="util_group_update_failed">环信群修改失败</string>
    <string name="util_group_member_deleted_failed">环信群成员删除失败</string>
    <string name="util_group_member_exists">成员已存在</string>
    <string name="util_add_group_member_failed">环信群成员添加失败</string>
    <string name="util_group_member_can_not_less_than_three">群组成员不能小于3个</string>
    <string name="util_group_exists">该群已存在</string>
    <string name="util_register_fail">注册失败</string>
    <string name="util_permission_error">权限错误</string>
    <string name="app_slogon">IMDemo</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="recall">撤回</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="Change_the_group_name">改变群名称</string>
</resources>