<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/task_bg">

        <include layout="@layout/tool_bar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_withdrawals_wechat_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_46"
        android:layout_below="@+id/img_me_head_bg"
        android:background="@drawable/selector_lin_click_bg"
        android:paddingLeft="@dimen/common_14"
        android:paddingRight="@dimen/common_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/withdraw_wetchat_account"
                android:textColor="#262626"
                android:textSize="@dimen/text_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/common_16"
                    android:text="@string/set_title"
                    android:textColor="#999999" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/right_row" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_46"
        android:layout_below="@+id/img_me_head_bg"
        android:layout_marginTop="@dimen/common_10"
        android:background="@drawable/selector_lin_click_bg"
        android:paddingLeft="@dimen/common_14"
        android:paddingRight="@dimen/common_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/withdraw_amount"
                android:textColor="#262626"
                android:textSize="@dimen/text_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/withdraw_0"
                    android:textColor="#999999" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_32"
        android:paddingLeft="@dimen/common_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/withdraw_method"
            android:textSize="@dimen/text_12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_me_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_46"
        android:layout_below="@id/lin_me_help_feedback"
        android:background="@drawable/selector_lin_click_bg"
        android:paddingLeft="@dimen/common_14"
        android:paddingRight="@dimen/common_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/common_16"
                android:layout_height="@dimen/common_18"
                android:layout_marginRight="@dimen/common_10"
                android:src="@mipmap/redpacket_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/recharge_payment_for_wetchat"
                android:textColor="#262626"
                android:textSize="@dimen/text_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/selector_check_box"
                    android:checked="true"
                    android:clickable="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_14">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_instruction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_withdrawals_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_withdrawals_submit"
                android:gravity="center"
                android:text="@string/withdraw_submit_rules"
                android:textColor="#999999"
                android:textSize="@dimen/common_12" />

            <Button
                android:id="@+id/btn_withdrawals_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/common_26"
                android:layout_marginLeft="@dimen/common_14"
                android:layout_marginRight="@dimen/common_14"
                android:layout_marginTop="@dimen/common_14"
                android:background="@drawable/selector_task_btn"
                android:text="@string/feedback_commit"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>