<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@drawable/title_backgroud"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/ease_common_tab_bg"
            android:onClick="back">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:scaleType="centerInside"
                android:src="@drawable/em_mm_title_back" />

        </LinearLayout>

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f0eb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <com.hyphenate.easeui.widget.EaseExpandGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/em_app_pref_bg"
                android:gravity="start"
                android:horizontalSpacing="6dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:verticalSpacing="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="#E6E6E6" />

            <RelativeLayout
                android:id="@+id/rl_change_group_name"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/em_btn_bottom_selector">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/Change_the_group_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/sm_groud_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dip"
                    android:text="test"
                    android:textColor="#999999"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_switch_block_groupmsg"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/em_btn_bottom_selector"
                android:padding="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/Shielding_of_the_message"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <com.hyphenate.easeui.widget.EaseSwitchButton
                    android:id="@+id/switch_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:switchStatus="close" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="#E6E6E6" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_exit_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/em_btn_style_alert_dialog_special"
            android:gravity="center"
            android:onClick="exitGroup"
            android:text="@string/Exit_the_group_chat"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_exitdel_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/em_btn_style_alert_dialog_special"
            android:gravity="center"
            android:text="@string/dismiss_group"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>